--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "@ionic-native/splash-screen": "4.3.2",
     "@ionic-native/status-bar": "4.3.2",
     "@ionic/storage": "2.0.1",
+    "angularfire2": "^5.0.0-rc.4",
     "cordova-plugin-qrscanner": "^2.5.0",
+    "firebase": "^4.6.2",
     "ionic-angular": "3.8.0",
     "ionicons": "3.0.0",
     "rxjs": "5.4.3",
@@ -33,6 +35,7 @@
     "zone.js": "0.8.18"
   },
   "devDependencies": {
+    "@angular/cli": "^1.5.4",
     "@ionic/app-scripts": "3.0.1",
     "typescript": "2.3.4"
   },
