--- a/package.json
+++ b/package.json
@@ -21,12 +21,14 @@
     "@angular/platform-browser": "4.4.4",
     "@angular/platform-browser-dynamic": "4.4.4",
     "@ionic-native/core": "4.3.2",
-    "@ionic-native/qr-scanner": "^4.4.0",
+    "@ionic-native/qr-scanner": "^4.4.2",
     "@ionic-native/splash-screen": "4.3.2",
+    "@ionic-native/sqlite": "^4.4.2",
     "@ionic-native/status-bar": "4.3.2",
     "@ionic/storage": "2.0.1",
     "angularfire2": "^5.0.0-rc.4",
     "cordova-plugin-qrscanner": "^2.5.0",
+    "cordova-sqlite-storage": "^2.1.2",
     "firebase": "^4.6.2",
     "ionic-angular": "3.8.0",
     "ionicons": "3.0.0",
@@ -42,7 +44,8 @@
   "description": "An Ionic project",
   "cordova": {
     "plugins": {
-      "cordova-plugin-qrscanner": {}
+      "cordova-plugin-qrscanner": {},
+      "cordova-sqlite-storage": {}
     }
   }
 }
