--- a/package.json
+++ b/package.json
@@ -21,12 +21,14 @@
     "@angular/platform-browser": "4.4.4",
     "@angular/platform-browser-dynamic": "4.4.4",
     "@ionic-native/core": "4.3.2",
+    "@ionic-native/native-storage": "^4.5.0",
     "@ionic-native/qr-scanner": "^4.4.2",
     "@ionic-native/splash-screen": "4.3.2",
     "@ionic-native/sqlite": "^4.4.2",
     "@ionic-native/status-bar": "4.3.2",
     "@ionic/storage": "2.0.1",
     "angularfire2": "^5.0.0-rc.4",
+    "cordova-plugin-nativestorage": "^2.2.2",
     "cordova-plugin-qrscanner": "^2.5.0",
     "cordova-plugin-x-toast": "^2.6.0",
     "cordova-sqlite-storage": "^2.1.2",
@@ -47,7 +49,8 @@
     "plugins": {
       "cordova-plugin-qrscanner": {},
       "cordova-sqlite-storage": {},
-      "cordova-plugin-x-toast": {}
+      "cordova-plugin-x-toast": {},
+      "cordova-plugin-nativestorage": {}
     }
   }
 }
