--- a/package.json
+++ b/package.json
@@ -28,12 +28,19 @@
     "@ionic-native/status-bar": "4.3.2",
     "@ionic/storage": "2.0.1",
     "angularfire2": "^5.0.0-rc.4",
+    "cordova-android": "^6.3.0",
+    "cordova-plugin-compat": "^1.2.0",
+    "cordova-plugin-device": "^1.1.4",
+    "cordova-plugin-ionic-webview": "^1.1.16",
     "cordova-plugin-nativestorage": "^2.2.2",
     "cordova-plugin-qrscanner": "^2.5.0",
+    "cordova-plugin-splashscreen": "^4.0.3",
+    "cordova-plugin-whitelist": "^1.3.1",
     "cordova-plugin-x-toast": "^2.6.0",
     "cordova-sqlite-storage": "^2.1.2",
     "firebase": "^4.6.2",
     "ionic-angular": "3.8.0",
+    "ionic-plugin-keyboard": "^2.2.1",
     "ionicons": "3.0.0",
     "rxjs": "5.4.3",
     "sw-toolbox": "3.6.0",
@@ -50,7 +57,15 @@
       "cordova-plugin-qrscanner": {},
       "cordova-sqlite-storage": {},
       "cordova-plugin-x-toast": {},
-      "cordova-plugin-nativestorage": {}
-    }
+      "cordova-plugin-nativestorage": {},
+      "ionic-plugin-keyboard": {},
+      "cordova-plugin-whitelist": {},
+      "cordova-plugin-device": {},
+      "cordova-plugin-splashscreen": {},
+      "cordova-plugin-ionic-webview": {}
+    },
+    "platforms": [
+      "android"
+    ]
   }
 }
