--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "@angular/platform-browser": "4.4.4",
     "@angular/platform-browser-dynamic": "4.4.4",
     "@ionic-native/core": "4.3.2",
-    "@ionic-native/native-storage": "^4.5.0",
+    "@ionic-native/device": "^4.5.2",
+    "@ionic-native/native-storage": "^4.5.2",
     "@ionic-native/qr-scanner": "^4.4.2",
     "@ionic-native/splash-screen": "4.3.2",
     "@ionic-native/sqlite": "^4.4.2",
